welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: not found: value h
  h=getMondeHauteur()
  ^Array1:5: error: not found: value l
  l=getMondeLargeur()
  ^Array1:7: error: not found: value h
  var T = new Array[Color](h)
                           ^Array1:9: error: not found: value h
  for (i<- 1 to h){
                ^Array1:10: error: not found: value getColorSol
    T(i)=getColorSol()
         ^